@@ -3,6 +3,7 @@ Version Next
     - Implement nbdkit "block_size" callback
     - Added configure flag "--enable-nbd" (issue #223)
     - Fix spurious "cache file is truncated" error (issue #222)
+    - Fix bugs in dcache.c when USE_FALLOCATE enabled (issue #224)
 
 Version 2.1.2 released April 23, 2024
 
